[package]
name = "actix-cloudinary-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-easy-multipart = "2.1.1"
serde = "1.0.136"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"